# darwin-code

./: .bazelignore  .bazelrc  .env.example  .gitattributes  .gitignore  .prettierignore  AGENTS.md  BUILD.bazel  LICENSE  MODULE.bazel  NOTICE  README.md  announcement_tip.toml  cliff.toml  config-example.toml  config.toml  defs.bzl  flake.nix  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rbe.bzl
codex-rs/: Cargo.toml
codex-rs/analytics/: Cargo.toml
codex-rs/analytics/src/: analytics_client_tests.rs  client.rs  events.rs  reducer.rs
codex-rs/app-server/: Cargo.toml  README.md
codex-rs/app-server-client/: Cargo.toml
codex-rs/app-server-client/src/: lib.rs
codex-rs/app-server-protocol/: Cargo.toml
codex-rs/app-server-protocol/src/: experimental_api.rs  export.rs  jsonrpc_lite.rs  lib.rs
codex-rs/app-server-protocol/tests/: schema_fixtures.rs
codex-rs/app-server/src/: app_server_tracing.rs  bespoke_event_handling.rs  byok_connectors.rs  codex_message_processor.rs  command_exec.rs  config_api.rs  dynamic_tools.rs  external_agent_config_api.rs  fs_watch.rs  fuzzy_file_search.rs  in_process.rs  lib.rs  message_processor.rs  models.rs  outgoing_message.rs  server_request_error.rs  thread_state.rs  thread_status.rs
codex-rs/apply-patch/: Cargo.toml
codex-rs/apply-patch/src/: invocation.rs  lib.rs  parser.rs
codex-rs/arg0/: Cargo.toml
codex-rs/arg0/src/: lib.rs
codex-rs/async-utils/: Cargo.toml
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: app_cmd.rs  debug_sandbox.rs  lib.rs  login.rs  main.rs  marketplace_cmd.rs  mcp_cmd.rs  responses_cmd.rs  wsl_paths.rs
codex-rs/cli/tests/: debug_clear_memories.rs  execpolicy.rs  features.rs  marketplace_add.rs  marketplace_upgrade.rs  mcp_add_remove.rs  mcp_list.rs
codex-rs/code-mode/: Cargo.toml
codex-rs/code-mode/src/: description.rs  service.rs
codex-rs/codex-api/: Cargo.toml
codex-rs/codex-api/src/: api_bridge.rs  api_bridge_tests.rs  common.rs  error.rs  files.rs  lib.rs  provider.rs  rate_limits.rs  telemetry.rs
codex-rs/codex-api/tests/: clients.rs  models_integration.rs  realtime_websocket_e2e.rs
codex-rs/codex-backend-openapi-models/: Cargo.toml
codex-rs/codex-client/: Cargo.toml
codex-rs/codex-client/src/: custom_ca.rs  default_client.rs  lib.rs
codex-rs/codex-client/tests/: ca_env.rs
codex-rs/codex-mcp/: Cargo.toml
codex-rs/codex-mcp/src/: lib.rs  mcp_connection_manager.rs  mcp_connection_manager_tests.rs
codex-rs/config/: Cargo.toml
codex-rs/config/src/: config_requirements.rs  config_toml.rs  diagnostics.rs  lib.rs  mcp_edit.rs  mcp_edit_tests.rs  mcp_types.rs  mcp_types_tests.rs  profile_toml.rs  requirements_exec_policy.rs  schema.rs  shell_environment.rs  state.rs  types.rs
codex-rs/connectors/src/: filter.rs  lib.rs
codex-rs/core/: BUILD.bazel  Cargo.toml  config.schema.json  gpt_5_1_prompt.md  gpt_5_2_prompt.md  models.json  prompt_with_apply_patch_instructions.md
codex-rs/core-plugins/: Cargo.toml
codex-rs/core-plugins/src/: loader.rs  manifest.rs  marketplace.rs  marketplace_tests.rs  marketplace_upgrade.rs  remote.rs  store.rs
codex-rs/core-skills/: Cargo.toml
codex-rs/core-skills/src/: config_rules.rs  injection.rs  invocation_utils.rs  invocation_utils_tests.rs  loader.rs  loader_tests.rs  manager.rs  manager_tests.rs  model.rs  remote.rs  system.rs
codex-rs/core/src/: agent_identity.rs  agents_md.rs  agents_md_tests.rs  arc_monitor.rs  arc_monitor_tests.rs  client.rs  client_common_tests.rs  client_tests.rs  codex_delegate.rs  codex_delegate_tests.rs  codex_thread.rs  command_canonicalization.rs  command_canonicalization_tests.rs  commit_attribution.rs  commit_attribution_tests.rs  compact.rs  compact_remote.rs  compact_tests.rs  connectors.rs  connectors_tests.rs  contextual_user_message.rs  event_mapping_tests.rs  exec.rs  exec_env_tests.rs  exec_policy.rs  exec_policy_tests.rs  exec_tests.rs  external_agent_config.rs  external_agent_config_tests.rs  git_info_tests.rs  hook_runtime.rs  landlock.rs  lib.rs  mcp.rs  mcp_openai_file.rs  mcp_skill_dependencies.rs  mcp_tool_call.rs  mcp_tool_call_tests.rs  mcp_tool_exposure.rs  memory_trace.rs  (+38 more)
codex-rs/core/tests/: responses_headers.rs
codex-rs/docs/: codex_mcp_interface.md
codex-rs/exec/: Cargo.toml
codex-rs/exec-server/: Cargo.toml
codex-rs/exec-server/src/: client.rs  connection.rs  fs_helper.rs  fs_sandbox.rs  runtime_paths.rs
codex-rs/exec-server/tests/: file_system.rs  initialize.rs  process.rs
codex-rs/exec/src/: cli.rs  cli_tests.rs  event_processor.rs  event_processor_with_human_output.rs  event_processor_with_jsonl_output.rs  lib.rs  lib_tests.rs  main.rs  (+2 more)
codex-rs/execpolicy/: Cargo.toml
codex-rs/features/: Cargo.toml
codex-rs/git-utils/: Cargo.toml
codex-rs/hooks/: Cargo.toml
codex-rs/install-context/: Cargo.toml
codex-rs/instructions/: Cargo.toml
codex-rs/keyring-store/: Cargo.toml
codex-rs/linux-sandbox/: Cargo.toml
codex-rs/login/: Cargo.toml
codex-rs/mcp-server/: Cargo.toml
codex-rs/model-provider/: Cargo.toml
codex-rs/model-provider-info/: Cargo.toml
codex-rs/models-manager/: Cargo.toml  models.json  prompt.md
codex-rs/network-proxy/: Cargo.toml
codex-rs/process-hardening/: Cargo.toml
codex-rs/protocol/: Cargo.toml
codex-rs/rmcp-client/: Cargo.toml
codex-rs/rollout/: Cargo.toml
codex-rs/sandboxing/: Cargo.toml
codex-rs/secrets/: Cargo.toml
codex-rs/shell-command/: Cargo.toml
codex-rs/shell-escalation/: Cargo.toml
codex-rs/skills/: Cargo.toml
codex-rs/state/: Cargo.toml
codex-rs/stdio-to-uds/: Cargo.toml
codex-rs/thread-store/: Cargo.toml
codex-rs/tools/: Cargo.toml
codex-rs/tui/: Cargo.toml  tooltips.txt
codex-rs/windows-sandbox-rs/: Cargo.toml
darwin-rs/analytics/: BUILD.bazel  Cargo.toml
darwin-rs/app-server/: BUILD.bazel  Cargo.toml  README.md
darwin-rs/arg0/: BUILD.bazel  Cargo.toml
darwin-rs/code-mode/: BUILD.bazel  Cargo.toml
darwin-rs/collaboration-mode-templates/: BUILD.bazel  Cargo.toml
darwin-rs/core-plugins/: BUILD.bazel  Cargo.toml
darwin-rs/core-skills/: BUILD.bazel  Cargo.toml
(+1933 files in other folders)
