[workspace]
members = [
    "analytics",
    "ansi-escape",
    "async-utils",
    "app-server",
    "app-server-client",
    "app-server-protocol",
    "apply-patch",
    "arg0",
    "features",
    "install-context",
    "codex-backend-openapi-models",
    "codex-experimental-api-macros",
    "code-mode",
    "collaboration-mode-templates",
    "cli",
    "config",
    "connectors",
    "shell-command",
    "shell-escalation",
    "skills",
    "core",
    "core-plugins",
    "core-skills",
    "hooks",
    "instructions",
    "secrets",
    "exec",
    "exec-server",
    "execpolicy",
    "file-search",
    "linux-sandbox",
    "codex-mcp",
    "mcp-server",
    "model-provider-info",
    "models-manager",
    "process-hardening",
    "plugin",
    "protocol",
    "rollout",
    "rmcp-client",
    "realtime-webrtc",
    "response-debug-context",
    "feedback",
    "sandboxing",
    "stdio-to-uds",
    "otel",
    "tui",
    "tools",
    "utils/absolute-path",
    "utils/cargo-bin",
    "git-utils",
    "utils/cache",
    "utils/image",
    "utils/json-to-toml",
    "utils/home-dir",
    "utils/pty",
    "utils/readiness",
    "utils/rustls-provider",
    "utils/string",
    "utils/cli",
    "utils/elapsed",
    "utils/sandbox-summary",
    "utils/sleep-inhibitor",
    "utils/approval-presets",
    "utils/output-truncation",
    "utils/path-utils",
    "utils/plugins",
    "utils/fuzzy-match",
    "utils/stream-parser",
    "utils/template",
    "codex-client",
    "codex-api",
    "state",
    "terminal-detection",
    "thread-store",
    "model-provider",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
# Track the edition for all workspace crates in one place. Individual
# crates can still override this value, but keeping it here means new
# crates created with `cargo new -w ...` automatically inherit the 2024
# edition.
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
# Internal
codex-ansi-escape = { path = "ansi-escape" }
codex-analytics = { path = "analytics" }
codex-api = { package = "darwin-code-api", path = "codex-api" }
codex-app-server = { package = "darwin-code-app-server", path = "app-server" }
codex-app-server-client = { package = "darwin-code-app-server-client", path = "app-server-client" }
codex-app-server-protocol = { package = "darwin-code-app-server-protocol", path = "app-server-protocol" }
codex-apply-patch = { package = "darwin-code-apply-patch", path = "apply-patch" }
codex-arg0 = { package = "darwin-code-arg0", path = "arg0" }
codex-async-utils = { package = "darwin-code-async-utils", path = "async-utils" }
codex-backend-openapi-models = { package = "darwin-code-backend-openapi-models", path = "codex-backend-openapi-models" }
codex-cli = { package = "darwin-code-cli", path = "cli" }
codex-client = { package = "darwin-code-client", path = "codex-client" }
codex-code-mode = { package = "darwin-code-code-mode", path = "code-mode" }
codex-collaboration-mode-templates = { path = "collaboration-mode-templates" }
codex-config = { package = "darwin-code-config", path = "config" }
codex-connectors = { path = "connectors" }
codex-core = { package = "darwin-code-core", path = "core" }
codex-core-plugins = { package = "darwin-code-core-plugins", path = "core-plugins" }
codex-core-skills = { package = "darwin-code-core-skills", path = "core-skills" }
codex-exec = { package = "darwin-code-exec", path = "exec" }
codex-exec-server = { package = "darwin-code-exec-server", path = "exec-server" }
codex-experimental-api-macros = { path = "codex-experimental-api-macros" }
codex-execpolicy = { package = "darwin-code-execpolicy", path = "execpolicy" }
codex-features = { package = "darwin-code-features", path = "features" }
codex-feedback = { path = "feedback" }
codex-install-context = { package = "darwin-code-install-context", path = "install-context" }
codex-file-search = { package = "darwin-code-file-search", path = "file-search" }
codex-git-utils = { package = "darwin-code-git-utils", path = "git-utils" }
codex-hooks = { package = "darwin-code-hooks", path = "hooks" }
codex-instructions = { package = "darwin-code-instructions", path = "instructions" }
codex-linux-sandbox = { package = "darwin-code-linux-sandbox", path = "linux-sandbox" }
codex-mcp = { package = "darwin-code-mcp", path = "codex-mcp" }
codex-mcp-server = { package = "darwin-code-mcp-server", path = "mcp-server" }
codex-model-provider-info = { package = "darwin-code-model-provider-info", path = "model-provider-info" }
codex-models-manager = { package = "darwin-code-models-manager", path = "models-manager" }
codex-otel = { path = "otel" }
codex-model-provider = { package = "darwin-code-model-provider", path = "model-provider" }
codex-plugin = { path = "plugin" }
codex-process-hardening = { package = "darwin-code-process-hardening", path = "process-hardening" }
codex-protocol = { package = "darwin-code-protocol", path = "protocol" }
codex-response-debug-context = { path = "response-debug-context" }
codex-realtime-webrtc = { path = "realtime-webrtc" }
codex-rmcp-client = { package = "darwin-code-rmcp-client", path = "rmcp-client" }
codex-rollout = { package = "darwin-code-rollout", path = "rollout" }
codex-sandboxing = { package = "darwin-code-sandboxing", path = "sandboxing" }
codex-secrets = { package = "darwin-code-secrets", path = "secrets" }
codex-shell-command = { package = "darwin-code-shell-command", path = "shell-command" }
codex-shell-escalation = { package = "darwin-code-shell-escalation", path = "shell-escalation" }
codex-skills = { package = "darwin-code-skills", path = "skills" }
codex-state = { package = "darwin-code-state", path = "state" }
codex-stdio-to-uds = { package = "darwin-code-stdio-to-uds", path = "stdio-to-uds" }
codex-terminal-detection = { package = "darwin-code-terminal-detection", path = "terminal-detection" }
codex-thread-store = { package = "darwin-code-thread-store", path = "thread-store" }
codex-tools = { package = "darwin-code-tools", path = "tools" }
codex-tui = { package = "darwin-code-tui", path = "tui" }
codex-utils-absolute-path = { package = "darwin-code-utils-absolute-path", path = "utils/absolute-path" }
codex-utils-approval-presets = { path = "utils/approval-presets" }
codex-utils-cache = { path = "utils/cache" }
codex-utils-cargo-bin = { path = "utils/cargo-bin" }
codex-utils-cli = { package = "darwin-code-utils-cli", path = "utils/cli" }
codex-utils-elapsed = { path = "utils/elapsed" }
codex-utils-fuzzy-match = { path = "utils/fuzzy-match" }
codex-utils-home-dir = { path = "utils/home-dir" }
codex-utils-image = { path = "utils/image" }
codex-utils-json-to-toml = { path = "utils/json-to-toml" }
codex-utils-output-truncation = { path = "utils/output-truncation" }
codex-utils-path = { package = "darwin-code-utils-path", path = "utils/path-utils" }
codex-utils-plugins = { path = "utils/plugins" }
codex-utils-pty = { path = "utils/pty" }
codex-utils-readiness = { path = "utils/readiness" }
codex-utils-rustls-provider = { path = "utils/rustls-provider" }
codex-utils-sandbox-summary = { path = "utils/sandbox-summary" }
codex-utils-sleep-inhibitor = { path = "utils/sleep-inhibitor" }
codex-utils-stream-parser = { path = "utils/stream-parser" }
codex-utils-string = { package = "darwin-code-utils-string", path = "utils/string" }
codex-utils-template = { package = "darwin-code-utils-template", path = "utils/template" }
codex-windows-sandbox = { path = "windows-sandbox-rs" }
core_test_support = { path = "core/tests/common" }
mcp_test_support = { path = "mcp-server/tests/common" }
app_test_support = { path = "app-server/tests/common" }

# Darwin alias compatibility during codex-* -> darwin-code-* transition
darwin-code-ansi-escape = { package = "codex-ansi-escape", path = "ansi-escape" }
darwin-code-analytics = { package = "codex-analytics", path = "analytics" }
darwin-code-async-utils = { path = "async-utils" }
darwin-code-app-server = { path = "app-server" }
darwin-code-app-server-client = { path = "app-server-client" }
darwin-code-app-server-protocol = { path = "app-server-protocol" }
darwin-code-apply-patch = { path = "apply-patch" }
darwin-code-arg0 = { path = "arg0" }
darwin-code-features = { path = "features" }
darwin-code-install-context = { path = "install-context" }
darwin-code-backend-openapi-models = { path = "codex-backend-openapi-models" }
darwin-code-code-mode = { path = "code-mode" }
darwin-code-collaboration-mode-templates = { package = "codex-collaboration-mode-templates", path = "collaboration-mode-templates" }
darwin-code-cli = { path = "cli" }
darwin-code-config = { path = "config" }
darwin-code-connectors = { package = "codex-connectors", path = "connectors" }
darwin-code-shell-command = { path = "shell-command" }
darwin-code-shell-escalation = { path = "shell-escalation" }
darwin-code-skills = { path = "skills" }
darwin-code-core = { path = "core" }
darwin-code-core-plugins = { path = "core-plugins" }
darwin-code-core-skills = { path = "core-skills" }
darwin-code-hooks = { path = "hooks" }
darwin-code-instructions = { path = "instructions" }
darwin-code-secrets = { path = "secrets" }
darwin-code-exec = { path = "exec" }
darwin-code-exec-server = { path = "exec-server" }
darwin-code-execpolicy = { path = "execpolicy" }
darwin-code-file-search = { path = "file-search" }
darwin-code-feedback = { package = "codex-feedback", path = "feedback" }
darwin-code-linux-sandbox = { path = "linux-sandbox" }
darwin-code-mcp = { path = "codex-mcp" }
darwin-code-mcp-server = { path = "mcp-server" }
darwin-code-model-provider-info = { path = "model-provider-info" }
darwin-code-models-manager = { path = "models-manager" }
darwin-code-plugin = { package = "codex-plugin", path = "plugin" }
darwin-code-process-hardening = { path = "process-hardening" }
darwin-code-protocol = { path = "protocol" }
darwin-code-response-debug-context = { package = "codex-response-debug-context", path = "response-debug-context" }
darwin-code-realtime-webrtc = { package = "codex-realtime-webrtc", path = "realtime-webrtc" }
darwin-code-rollout = { path = "rollout" }
darwin-code-rmcp-client = { path = "rmcp-client" }
darwin-code-sandboxing = { path = "sandboxing" }
darwin-code-stdio-to-uds = { path = "stdio-to-uds" }
darwin-code-otel = { package = "codex-otel", path = "otel" }
darwin-code-tui = { path = "tui" }
darwin-code-tools = { path = "tools" }
darwin-code-utils-absolute-path = { path = "utils/absolute-path" }
darwin-code-utils-cargo-bin = { package = "codex-utils-cargo-bin", path = "utils/cargo-bin" }
darwin-code-git-utils = { path = "git-utils" }
darwin-code-utils-cache = { package = "codex-utils-cache", path = "utils/cache" }
darwin-code-utils-image = { package = "codex-utils-image", path = "utils/image" }
darwin-code-utils-json-to-toml = { package = "codex-utils-json-to-toml", path = "utils/json-to-toml" }
darwin-code-utils-home-dir = { package = "codex-utils-home-dir", path = "utils/home-dir" }
darwin-code-utils-pty = { package = "codex-utils-pty", path = "utils/pty" }
darwin-code-utils-readiness = { package = "codex-utils-readiness", path = "utils/readiness" }
darwin-code-utils-rustls-provider = { package = "codex-utils-rustls-provider", path = "utils/rustls-provider" }
darwin-code-utils-string = { path = "utils/string" }
darwin-code-utils-cli = { path = "utils/cli" }
darwin-code-utils-elapsed = { package = "codex-utils-elapsed", path = "utils/elapsed" }
darwin-code-utils-sandbox-summary = { package = "codex-utils-sandbox-summary", path = "utils/sandbox-summary" }
darwin-code-utils-sleep-inhibitor = { package = "codex-utils-sleep-inhibitor", path = "utils/sleep-inhibitor" }
darwin-code-utils-approval-presets = { package = "codex-utils-approval-presets", path = "utils/approval-presets" }
darwin-code-utils-output-truncation = { package = "codex-utils-output-truncation", path = "utils/output-truncation" }
darwin-code-utils-path = { path = "utils/path-utils" }
darwin-code-utils-plugins = { package = "codex-utils-plugins", path = "utils/plugins" }
darwin-code-utils-fuzzy-match = { package = "codex-utils-fuzzy-match", path = "utils/fuzzy-match" }
darwin-code-utils-stream-parser = { package = "codex-utils-stream-parser", path = "utils/stream-parser" }
darwin-code-utils-template = { path = "utils/template" }
darwin-code-client = { path = "codex-client" }
darwin-code-api = { path = "codex-api" }
darwin-code-state = { path = "state" }
darwin-code-terminal-detection = { path = "terminal-detection" }
darwin-code-thread-store = { path = "thread-store" }
darwin-code-model-provider = { path = "model-provider" }
darwin-code-windows-sandbox = { path = "windows-sandbox-rs" }

# External

# Missing workspace-shared externals required by renamed members
age = "0.11.1"
crypto_box = { version = "0.9.1", features = ["seal"] }
deno_core_icudata = "0.77.0"
quick-xml = { version = "0.38.4", features = ["serialize"] }
tonic = { version = "0.14.3", default-features = false, features = ["channel", "codegen"] }
tonic-prost = "0.14.3"
v8 = "=146.4.0"
zeroize = "1.8.2"
allocative = "0.3.3"
ansi-to-tui = "7.0.0"
anyhow = "1"
arboard = { version = "3", features = ["wayland-data-control"] }
arc-swap = "1.9.0"
assert_cmd = "2"
assert_matches = "1.5.0"
async-channel = "2.3.1"
async-stream = "0.3.6"
async-trait = "0.1.89"
axum = { version = "0.8", default-features = false }
base64 = "0.22.1"
bm25 = "2.3.2"
bytes = "1.10.1"
chardetng = "0.1.17"
chrono = "0.4.43"
clap = "4"
clap_complete = "4"
color-eyre = "0.6.3"
constant_time_eq = "0.3.1"
crossbeam-channel = "0.5.15"
crossterm = "0.28.1"
csv = "1.3.1"
ctor = "0.6.3"
derive_more = "2"
diffy = "0.4.2"
dirs = "6"
dotenvy = "0.15.7"
dunce = "1.0.4"
ed25519-dalek = { version = "2.2.0", features = ["pkcs8"] }
encoding_rs = "0.8.35"
env-flags = "0.1.1"
env_logger = "0.11.9"
eventsource-stream = "0.2.3"
futures = { version = "0.3", default-features = false }
gethostname = "1.1.0"
globset = "0.4"
hmac = "0.12.1"
http = "1.3.1"
iana-time-zone = "0.1.64"
icu_decimal = "2.1"
icu_locale_core = "2.1"
icu_provider = { version = "2.1", features = ["sync"] }
ignore = "0.4.23"
image = { version = "^0.25.9", default-features = false }
include_dir = "0.7.4"
indexmap = "2.12.0"
insta = "1.46.3"
inventory = "0.3.19"
itertools = "0.14.0"
jsonwebtoken = "9.3.1"
keyring = { version = "3.6", default-features = false }
landlock = "0.4.4"
lazy_static = "1"
libc = "0.2.182"
log = "0.4"
lru = "0.16.3"
maplit = "1.0.2"
mime_guess = "2.0.5"
multimap = "0.10.0"
notify = "8.2.0"
nucleo = { git = "https://github.com/helix-editor/nucleo.git", rev = "4253de9faabb4e5c6d81d946a5e35a90f87347ee" }
once_cell = "1.20.2"
openssl-sys = "*"
opentelemetry = "0.31.0"
opentelemetry-appender-tracing = "0.31.0"
opentelemetry-otlp = "0.31.0"
opentelemetry-semantic-conventions = "0.31.0"
opentelemetry_sdk = "0.31.0"
os_info = "3.12.0"
owo-colors = "4.3.0"
path-absolutize = "3.1.1"
pathdiff = "0.2"
portable-pty = "0.9.0"
predicates = "3"
pretty_assertions = "1.4.1"
pulldown-cmark = "0.10"
rand = "0.9"
ratatui = "0.29.0"
ratatui-macros = "0.6.0"
regex = "1.12.3"
regex-lite = "0.1.8"
reqwest = "0.12"
rmcp = { version = "0.15.0", default-features = false }
runfiles = { git = "https://github.com/dzbarsky/rules_rust", rev = "b56cbaa8465e74127f1ea216f813cd377295ad81" }
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "std",
] }
rustls-native-certs = "0.8.3"
rustls-pki-types = "1.14.0"
schemars = "0.8.22"
seccompiler = "0.5.0"
semver = "1.0"
serde = "1"
serde_json = "1"
sentry = "0.46"
serde_path_to_error = "0.1.20"
serde_with = "3.17"
serde_yaml = "0.9"
serial_test = "3.2.0"
sha1 = "0.10.6"
sha2 = "0.10"
shlex = "1.3.0"
similar = "2.7.0"
socket2 = "0.6.1"
sqlx = { version = "0.8.6", default-features = false, features = [
    "chrono",
    "json",
    "macros",
    "migrate",
    "runtime-tokio-rustls",
    "sqlite",
    "time",
    "uuid",
] }
starlark = "0.13.0"
strum = "0.27.2"
strum_macros = "0.28.0"
supports-color = "3.0.2"
syntect = "5"
sys-locale = "0.3.2"
tempfile = "3.23.0"
test-log = "0.2.19"
textwrap = "0.16.2"
thiserror = "2.0.17"
time = "0.3.47"
tiny_http = "0.12"
tokio = "1"
tokio-stream = "0.1.18"
tokio-test = "0.4"
tokio-tungstenite = { version = "0.28.0", features = [
    "proxy",
    "rustls-tls-native-roots",
] }
tokio-util = "0.7.18"
toml = "0.9.5"
toml_edit = "0.24.0"
tracing = "0.1.44"
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = "0.3.22"
tracing-test = "0.2.5"
tree-sitter = "0.25.10"
tree-sitter-bash = "0.25"
ts-rs = "11"
tungstenite = { version = "0.27.0", features = ["deflate", "proxy"] }
uds_windows = "1.1.0"
unicode-segmentation = "1.12.0"
unicode-width = "0.2"
url = "2"
urlencoding = "2.1"
uuid = "1"
vt100 = "0.16.2"
walkdir = "2.5.0"
webbrowser = "1.0"
which = "8"
whoami = "1.6.1"
wildmatch = "2.6.1"
zip = "2.4.2"
zstd = "0.13"

wiremock = "0.6"

[workspace.lints]
rust = {}

[workspace.lints.clippy]
expect_used = "deny"
identity_op = "deny"
manual_clamp = "deny"
manual_filter = "deny"
manual_find = "deny"
manual_flatten = "deny"
manual_map = "deny"
manual_memcpy = "deny"
manual_non_exhaustive = "deny"
manual_ok_or = "deny"
manual_range_contains = "deny"
manual_retain = "deny"
manual_strip = "deny"
manual_try_fold = "deny"
manual_unwrap_or = "deny"
needless_borrow = "deny"
needless_borrowed_reference = "deny"
needless_collect = "deny"
needless_late_init = "deny"
needless_option_as_deref = "deny"
needless_question_mark = "deny"
needless_update = "deny"
redundant_clone = "deny"
redundant_closure = "deny"
redundant_closure_for_method_calls = "deny"
redundant_static_lifetimes = "deny"
trivially_copy_pass_by_ref = "deny"
uninlined_format_args = "deny"
unnecessary_filter_map = "deny"
unnecessary_lazy_evaluations = "deny"
unnecessary_sort_by = "deny"
unnecessary_to_owned = "deny"
unwrap_used = "deny"

# cargo-shear cannot see the platform-specific openssl-sys usage, so we
# silence the false positive here instead of deleting a real dependency.
[workspace.metadata.cargo-shear]
ignored = [
    "icu_provider",
    "openssl-sys",
    "codex-utils-readiness",
    "codex-utils-template",
]

[profile.release]
lto = "fat"
split-debuginfo = "off"
# Because we bundle some of these executables with the TypeScript CLI, we
# remove everything to make the binary as small as possible.
strip = "symbols"

# See https://github.com/openai/codex/issues/1411 for details.
codegen-units = 1

[profile.ci-test]
debug = 1         # Reduce debug symbol size
inherits = "test"
opt-level = 0

[patch.crates-io]
# Uncomment to debug local changes.
# ratatui = { path = "../../ratatui" }
crossterm = { git = "https://github.com/nornagon/crossterm", rev = "87db8bfa6dc99427fd3b071681b07fc31c6ce995" }
ratatui = { git = "https://github.com/nornagon/ratatui", rev = "9b2ad1298408c45918ee9f8241a6f95498cdbed2" }
tokio-tungstenite = { git = "https://github.com/openai-oss-forks/tokio-tungstenite", rev = "132f5b39c862e3a970f731d709608b3e6276d5f6" }
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }

# Uncomment to debug local changes.
# rmcp = { path = "../../rust-sdk/crates/rmcp" }

[patch."ssh://git@github.com/openai-oss-forks/tungstenite-rs.git"]
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }
