[package]
name = "darwin-code-app-server-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "darwin_code_app_server_client"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
codex-feedback = { workspace = true }
darwin-code-app-server = { workspace = true }
darwin-code-app-server-protocol = { workspace = true }
darwin-code-arg0 = { workspace = true }
darwin-code-core = { workspace = true }
darwin-code-exec-server = { workspace = true }
darwin-code-protocol = { workspace = true }
darwin-code-utils-rustls-provider = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "rt"] }
tokio-tungstenite = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
