[package]
edition.workspace = true
license.workspace = true
name = "darwin-code-mcp"
version.workspace = true

[lib]
name = "darwin_code_mcp"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-channel = { workspace = true }
darwin-code-async-utils = { workspace = true }
darwin-code-config = { workspace = true }
darwin-code-login = { workspace = true }
darwin-code-otel = { workspace = true }
darwin-code-protocol = { workspace = true }
darwin-code-rmcp-client = { workspace = true }
darwin-code-utils-plugins = { workspace = true }
futures = { workspace = true }
regex-lite = { workspace = true }
rmcp = { workspace = true, default-features = false, features = ["base64", "macros", "schemars", "server"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha1 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
darwin-code-utils-absolute-path = { workspace = true }
pretty_assertions = { workspace = true }
rmcp = { workspace = true, default-features = false, features = ["base64", "macros", "schemars", "server"] }
tempfile = { workspace = true }
