[package]
edition.workspace = true
license.workspace = true
name = "darwin-code-core-plugins"
version.workspace = true

[lib]
doctest = false
name = "darwin_code_core_plugins"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
darwin-code-app-server-protocol = { workspace = true }
darwin-code-config = { workspace = true }
darwin-code-core-skills = { workspace = true }
darwin-code-exec-server = { workspace = true }
darwin-code-git-utils = { workspace = true }
darwin-code-login = { workspace = true }
darwin-code-protocol = { workspace = true }
darwin-code-utils-absolute-path = { workspace = true }
darwin-code-utils-plugins = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
