[package]
name = "darwin-code-exec"
version.workspace = true
edition.workspace = true
license.workspace = true
autotests = false

[[bin]]
name = "darwin-code-exec"
path = "src/main.rs"

[lib]
name = "darwin_code_exec"
path = "src/lib.rs"

[[test]]
name = "all"
path = "tests/all.rs"

[lints]
workspace = true

[dependencies]
darwin-code-client = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
codex-feedback = { workspace = true }
darwin-code-arg0 = { workspace = true }
darwin-code-app-server-client = { workspace = true }
darwin-code-app-server-protocol = { workspace = true }
darwin-code-core = { workspace = true }
darwin-code-git-utils = { workspace = true }
darwin-code-model-provider-info = { workspace = true }
darwin-code-otel = { workspace = true }
darwin-code-protocol = { workspace = true }
darwin-code-utils-absolute-path = { workspace = true }
darwin-code-utils-cli = { workspace = true }
owo-colors = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
supports-color = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
ts-rs = { workspace = true, features = [
    "uuid-impl",
    "serde-json-impl",
    "no-serde-warnings",
] }
uuid = { workspace = true }


[dev-dependencies]
assert_cmd = { workspace = true }
darwin-code-apply-patch = { workspace = true }
darwin-code-utils-cargo-bin = { workspace = true }
core_test_support = { workspace = true }
libc = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
predicates = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tracing-opentelemetry = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
wiremock = { workspace = true }
