[package]
edition.workspace = true
license.workspace = true
name = "darwin-code-model-provider"
version.workspace = true

[lib]
doctest = false
name = "darwin_code_model_provider"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
darwin-code-api = { workspace = true }
darwin-code-login = { workspace = true }
darwin-code-model-provider-info = { workspace = true }
darwin-code-protocol = { workspace = true }
http = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
