[package]
name = "darwin-code-process-hardening"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "darwin_code_process_hardening"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
libc = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
